<resources>
    <string name="app_name">Narasiqu</string>

    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Yuk bagikan cerita kamu dan lihat cerita pengguna lain disini!</string>
    <string name="title_welcome_page">Selamat datang di Narasiqu!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_login_page">Masuk Pakai akun kamu ya</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="title_activity_maps">Maps Narasiqu</string>
    <string name="story_desc">Hari ini kerja capek banget!</string>
    <string name="author">Yondika Vio Landa</string>
    <string name="upload">Unggah</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
</resources>