<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="16dp"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="2dp"
    app:cardCornerRadius="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/storyPoto"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_margin="12dp"
        android:adjustViewBounds="true"
        android:src="@color/narasiqu_secondary"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/judulStory"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:fontFamily="@font/pjs_bold"/>

    <TextView
        android:id="@+id/textStory"
        android:layout_marginBottom="12dp"
        android:layout_marginHorizontal="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="@string/story_desc"
        android:textColor="@color/black"
        android:fontFamily="@font/pjs"
        android:justificationMode="inter_word"
        android:textSize="16sp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>