<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bone"
    tools:context=".AddStoryActivity">

    <RelativeLayout
        android:id="@+id/rlHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="32dp"
                android:layout_height="match_parent"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/baseline_arrow_back_24" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pjs_bold"
                android:paddingVertical="18dp"
                android:text="Buat Cerita"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

    <ScrollView
        android:id="@+id/svContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rlHeader">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivPreview"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginVertical="24dp"
                app:srcCompat="@drawable/il_upload" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnCamera"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_background"
                    android:fontFamily="@font/pjs_bold"
                    android:text="@string/camera"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnGallery"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_background"
                    android:fontFamily="@font/pjs_bold"
                    android:text="@string/gallery"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDescLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="24dp"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="1dp"
                app:hintTextColor="@android:color/darker_gray"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDesc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:fontFamily="@font/pjs"
                    android:gravity="start"
                    android:hint="@string/story_desc"
                    android:inputType="textMultiLine"
                    android:textColor="@color/black"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnUpload"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="24dp"
                android:background="@drawable/rounded_background"
                android:fontFamily="@font/pjs_bold"
                android:text="@string/upload"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
