<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bone"
    tools:context=".DetailStoryActivity">

    <RelativeLayout
        android:id="@+id/rlHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="32dp"
                android:layout_height="match_parent"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/baseline_arrow_back_24" />

            <TextView
                android:id="@+id/tvStoryTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pjs_bold"
                android:paddingVertical="18dp"
                android:text="Detail Cerita"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rlHeader">

        <ImageView
            android:id="@+id/ivStoryPhoto"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/rounded_background" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvStoryTitleDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/pjs_bold"
        android:text="@string/author"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvImage" />

    <TextView
        android:id="@+id/tvStoryDescription"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fontFamily="@font/pjs"
        android:justificationMode="inter_word"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="24dp"
        android:text="@string/story_desc"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStoryTitleDetail" />

</androidx.constraintlayout.widget.ConstraintLayout>
